--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ owner:
   # Social networking links used in footer. Update and remove as you like.
   twitter: zeruhur
   github: https://github.com/zeruhur
+  itchio: https://zeruhur.itch.io/
   stackexchange: 
   linkedin: 
   # For Google Authorship https://plus.google.com/authorship
