--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-node_modules/*
 _site
 .sass-cache
+.DS_Store
 .jekyll-metadata
+
+# Ignore the config file that's used for gh-pages.
+_config.gh-pages.yml
+
 Gemfile.lock
-.jekyll-cache
