--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:       aspidochelone
-email:       
+email:       robertobisceglie@gmail.com
 author:      zeruhur
 description: "Yet another NSR blog"
 baseurl:     "aspidochelone"
